<resources>
    <string name="app_name">My App Portfolio</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="spotifystreamer">SPOTIFY STREAMER</string>
    <string name="scoresapp">SCORES APP</string>
    <string name="libraryapp">LIBRARY APP</string>
    <string name="builditbigger">BUILD IT BIGGER</string>
    <string name="baconreader">BACON READER</string>
    <string name="capstone">CAPSTONE: MY OWN APP</string>
    <string name="title">My Nanodegree Apps!</string>
    <string name="open_ap">Open the app: </string>
</resources>
